[build-system]
requires = ["setuptools>=75.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "render-engine-api"
dynamic = ["version"]
description = "Shared API layer for render-engine CLI, TUI, and other tools"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "render-engine",
    "python-slugify",
    "python-frontmatter",
    "python-dateutil",
]

dev = [
    "pytest",
    "pytest-cov",
    "ty",
]
