[build-system]
requires = ["setuptools>=75.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "render-engine-api"
dynamic = ["version"]
description = "Shared API layer for render-engine CLI, TUI, and other tools"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
  "rich>=13.0",
  "tomli>=1.0; python_version < '3.11'"
]

[dependency-groups]
dev = [
    "nox",
    "pytest",
    "pytest-cov",
    "hypothesis",
    "ty",
    "deptry"
]

[tool.pytest.ini_options]
pythonpath = ["render_engine_api"]
addopts = ["--cov=render_engine_api", "--cov-report=term-missing", "-ra", "-q"]

[tool.semantic_release]
version_toml = "pyproject.toml:project.version"
branch = "main"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ty.environment]
python = ".venv"

[tool.ty.rules]
unresolved-import = "warn"

[tool.deptry]
extend_exclude = ["noxfile.py"]
